redid table with flexbox and fixed vertical spacing on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -332,8 +332,9 @@ p {
 
 #title {
     order: 1;
-    font-size: 9.5vh;
-    margin-top: 12%;
+    font-size: min(9.5vh, 16.5vw);
+    margin-top: 5vh;
+    white-space: nowrap;
 }
 
 #board {
@@ -350,6 +351,8 @@ p {
 
 tbody {
     position: absolute;
+    display: flex;
+    flex-direction: column;
     left: 0;
     top: 0;
     right: 0;
@@ -357,20 +360,26 @@ tbody {
 }
 
 tr {
-    display: inline-block;
+    /* display: inline-block; */
+    display: flex;
+    flex-direction: row;
     width: 100%;
-    height: 18%;
-    position: relative;
+    height: 20%;
+    padding: 0.3%;
+    /* margin: 1%; */
+    /* position: relative; */
     /* overflow: hidden; */
-    white-space: nowrap;
-    margin: 0 auto;
+    /* white-space: nowrap; */
+    /* margin: 0 auto; */
 }
 
 td {
     display: inline-block;
     position: relative;
-    margin: 0 auto;
-    width: 18%;
+    /* margin: 0 auto; */
+    /* margin: 1%; */
+    padding: 0.3%;
+    width: 20%;
     height: 100%;
     overflow: hidden;
     white-space: nowrap;
@@ -393,6 +402,7 @@ td button {
 
 #footer {
     order: 3;
+    margin-top: 7%;
     display: flex;
     flex-direction: column;
 }
